Added a paragraph on atmospheric grids

--- a/docs/JOSS/paper.bib
+++ b/docs/JOSS/paper.bib
@@ -1,4 +1,210 @@
 
+@ARTICLE{Kempton23,
+       author = {{Kempton}, Eliza M. -R. and {Lessard}, Madeline and {Malik}, Matej and {Rogers}, Leslie A. and {Futrowsky}, Kate E. and {Ih}, Jegug and {Marounina}, Nadejda and {Romero-Mirza}, Carlos E.},
+        title = "{Where are the Water Worlds?: Self-consistent Models of Water-rich Exoplanet Atmospheres}",
+      journal = {\apj},
+     keywords = {Exoplanet atmospheres, Exoplanet astronomy, Exoplanets, Mini Neptunes, Radiative transfer, 487, 486, 498, 1063, 1335, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2023,
+        month = aug,
+       volume = {953},
+       number = {1},
+          eid = {57},
+        pages = {57},
+          doi = {10.3847/1538-4357/ace10d},
+archivePrefix = {arXiv},
+       eprint = {2307.06508},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023ApJ...953...57K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+@ARTICLE{Jorgensen24,
+       author = {{J{\o}rgensen}, Uffe G. and {Amadio}, Flavia and {Campos Estrada}, Beatriz and {M{\o}ller}, Kristian Holten and {Schneider}, Aaron D. and {Balduin}, Thorsten and {D'Alessandro}, Azzurra and {Symeonidou}, Eftychia and {Helling}, Christiane and {Nordlund}, {\r{A}}ke and {Woitke}, Peter},
+        title = "{A grid of self-consistent MSG (MARCS-StaticWeather-GGchem) cool stellar, sub-stellar, and exoplanetary model atmospheres}",
+      journal = {\aap},
+     keywords = {molecular data, opacity, stars: atmospheres, stars: late-type, stars: low-mass, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2024,
+        month = oct,
+       volume = {690},
+          eid = {A127},
+        pages = {A127},
+          doi = {10.1051/0004-6361/202450108},
+archivePrefix = {arXiv},
+       eprint = {2407.09397},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024A&A...690A.127J},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Roth24,
+       author = {{Roth}, Alexander and {Parmentier}, Vivien and {Hammond}, Mark},
+        title = "{Hot Jupiter diversity and the onset of TiO/VO revealed by a large grid of non-grey global circulation models}",
+      journal = {\mnras},
+     keywords = {Astrophysics - Earth and Planetary Astrophysics},
+         year = 2024,
+        month = jun,
+       volume = {531},
+       number = {1},
+        pages = {1056-1083},
+          doi = {10.1093/mnras/stae984},
+archivePrefix = {arXiv},
+       eprint = {2404.09626},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024MNRAS.531.1056R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{charnay18,
+       author = {{Charnay}, B. and {B{\'e}zard}, B. and {Baudino}, J. -L. and {Bonnefoy}, M. and {Boccaletti}, A. and {Galicher}, R.},
+        title = "{A Self-consistent Cloud Model for Brown Dwarfs and Young Giant Exoplanets: Comparison with Photometric and Spectroscopic Observations}",
+      journal = {\apj},
+     keywords = {brown dwarfs, planets and satellites: atmospheres, planets and satellites: gaseous planets, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2018,
+        month = feb,
+       volume = {854},
+       number = {2},
+          eid = {172},
+        pages = {172},
+          doi = {10.3847/1538-4357/aaac7d},
+archivePrefix = {arXiv},
+       eprint = {1711.11483},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...854..172C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{samland17,
+       author = {{Samland}, M. and {Molli{\`e}re}, P. and {Bonnefoy}, M. and {Maire}, A. -L. and {Cantalloube}, F. and {Cheetham}, A.~C. and {Mesa}, D. and {Gratton}, R. and {Biller}, B.~A. and {Wahhaj}, Z. and {Bouwman}, J. and {Brandner}, W. and {Melnick}, D. and {Carson}, J. and {Janson}, M. and {Henning}, T. and {Homeier}, D. and {Mordasini}, C. and {Langlois}, M. and {Quanz}, S.~P. and {van Boekel}, R. and {Zurlo}, A. and {Schlieder}, J.~E. and {Avenhaus}, H. and {Beuzit}, J. -L. and {Boccaletti}, A. and {Bonavita}, M. and {Chauvin}, G. and {Claudi}, R. and {Cudel}, M. and {Desidera}, S. and {Feldt}, M. and {Fusco}, T. and {Galicher}, R. and {Kopytova}, T.~G. and {Lagrange}, A. -M. and {Le Coroller}, H. and {Martinez}, P. and {Moeller-Nilsson}, O. and {Mouillet}, D. and {Mugnier}, L.~M. and {Perrot}, C. and {Sevin}, A. and {Sissa}, E. and {Vigan}, A. and {Weber}, L.},
+        title = "{Spectral and atmospheric characterization of 51 Eridani b using VLT/SPHERE}",
+      journal = {\aap},
+     keywords = {stars: individual: 51 Eridani, planets and satellites: atmospheres, methods: data analysis, techniques: high angular resolution, techniques: image processing, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2017,
+        month = jul,
+       volume = {603},
+          eid = {A57},
+        pages = {A57},
+          doi = {10.1051/0004-6361/201629767},
+archivePrefix = {arXiv},
+       eprint = {1704.02987},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017A&A...603A..57S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{lacy_burrows,
+       author = {{Lacy}, Brianna and {Burrows}, Adam},
+        title = "{Self-consistent Models of Y Dwarf Atmospheres with Water Clouds and Disequilibrium Chemistry}",
+      journal = {\apj},
+     keywords = {Brown dwarfs, Y dwarfs, Atmospheric structure, Exoplanet atmospheres, 185, 1827, 2309, 487, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2023,
+        month = jun,
+       volume = {950},
+       number = {1},
+          eid = {8},
+        pages = {8},
+          doi = {10.3847/1538-4357/acc8cb},
+archivePrefix = {arXiv},
+       eprint = {2303.16295},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023ApJ...950....8L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{diamondback,
+       author = {{Morley}, Caroline V. and {Mukherjee}, Sagnick and {Marley}, Mark S. and {Fortney}, Jonathan J. and {Visscher}, Channon and {Lupu}, Roxana and {Gharib-Nezhad}, Ehsan and {Thorngren}, Daniel and {Freedman}, Richard and {Batalha}, Natasha},
+        title = "{The Sonora Substellar Atmosphere Models. III. Diamondback: Atmospheric Properties, Spectra, and Evolution for Warm Cloudy Substellar Objects}",
+      journal = {\apj},
+     keywords = {Brown dwarfs, L dwarfs, T dwarfs, Exoplanet atmospheres, Stellar atmospheres, Planetary atmospheres, Atmospheric clouds, Atmospheric composition, Atmospheric evolution, Stellar evolutionary models, 185, 894, 1679, 487, 1584, 1244, 2180, 2120, 2301, 2046, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2024,
+        month = nov,
+       volume = {975},
+       number = {1},
+          eid = {59},
+        pages = {59},
+          doi = {10.3847/1538-4357/ad71d5},
+archivePrefix = {arXiv},
+       eprint = {2402.00758},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024ApJ...975...59M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{cholla,
+       author = {{Karalidi}, Theodora and {Marley}, Mark and {Fortney}, Jonathan J. and {Morley}, Caroline and {Saumon}, Didier and {Lupu}, Roxana and {Visscher}, Channon and {Freedman}, Richard},
+        title = "{The Sonora Substellar Atmosphere Models. II. Cholla: A Grid of Cloud-free, Solar Metallicity Models in Chemical Disequilibrium for the JWST Era}",
+      journal = {\apj},
+     keywords = {185, 498, 2120, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2021,
+        month = dec,
+       volume = {923},
+       number = {2},
+          eid = {269},
+        pages = {269},
+          doi = {10.3847/1538-4357/ac3140},
+archivePrefix = {arXiv},
+       eprint = {2110.11824},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021ApJ...923..269K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{elfowl,
+       author = {{Mukherjee}, Sagnick and {Fortney}, Jonathan J. and {Morley}, Caroline V. and {Batalha}, Natasha E. and {Marley}, Mark S. and {Karalidi}, Theodora and {Visscher}, Channon and {Lupu}, Roxana and {Freedman}, Richard and {Gharib-Nezhad}, Ehsan},
+        title = "{The Sonora Substellar Atmosphere Models. IV. Elf Owl: Atmospheric Mixing and Chemical Disequilibrium with Varying Metallicity and C/O Ratios}",
+      journal = {\apj},
+     keywords = {Brown dwarfs, T dwarfs, Y dwarfs, Atmospheric composition, Extrasolar gaseous giant planets, 185, 1679, 1827, 2120, 509, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2024,
+        month = mar,
+       volume = {963},
+       number = {1},
+          eid = {73},
+        pages = {73},
+          doi = {10.3847/1538-4357/ad18c2},
+archivePrefix = {arXiv},
+       eprint = {2402.00756},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024ApJ...963...73M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{bobcat,
+       author = {{Marley}, Mark S. and {Saumon}, Didier and {Visscher}, Channon and {Lupu}, Roxana and {Freedman}, Richard and {Morley}, Caroline and {Fortney}, Jonathan J. and {Seay}, Christopher and {Smith}, Adam J.~R.~W. and {Teal}, D.~J. and {Wang}, Ruoyan},
+        title = "{The Sonora Brown Dwarf Atmosphere and Evolution Models. I. Model Description and Application to Cloudless Atmospheres in Rainout Chemical Equilibrium}",
+      journal = {\apj},
+     keywords = {Brown dwarfs, T dwarfs, L dwarfs, L subdwarfs, T subdwarfs, Y dwarfs, Stellar atmospheres, 185, 1679, 894, 896, 1680, 1827, 1584, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2021,
+        month = oct,
+       volume = {920},
+       number = {2},
+          eid = {85},
+        pages = {85},
+          doi = {10.3847/1538-4357/ac141d},
+archivePrefix = {arXiv},
+       eprint = {2107.07434},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021ApJ...920...85M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 
 @ARTICLE{emcee,
